[gd_scene load_steps=8 format=3 uid="uid://3q1q27t3ndyk"]

[ext_resource type="Script" uid="uid://ceapwjlm5hyvn" path="res://code/school.gd" id="1_afkkl"]
[ext_resource type="Texture2D" uid="uid://cjyfxvgqat100" path="res://sprites/schoolRoom.png" id="1_jemgs"]
[ext_resource type="Texture2D" uid="uid://dxfnnls2k45xk" path="res://sprites/schoolRoom decorations.png" id="2_afkkl"]
[ext_resource type="AudioStream" uid="uid://8mqktbel8nec" path="res://music/DANGANRONPA OST_ -1-26- Beautiful Morning.mp3" id="2_ex17d"]
[ext_resource type="PackedScene" uid="uid://cugdj5hfbsory" path="res://scenes/player.tscn" id="4_oaecj"]
[ext_resource type="Texture2D" uid="uid://bsdk607lphgt2" path="res://sprites/teenclothe.png" id="5_ex17d"]
[ext_resource type="Texture2D" uid="uid://bgmvd50v384td" path="res://sprites/teenStick.png" id="6_r5pcs"]

[node name="school" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afkkl")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(749, 382)
stream = ExtResource("2_ex17d")
autoplay = true
parameters/looping = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_jemgs")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_afkkl")

[node name="test" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 505.0
offset_top = 443.0
offset_right = 536.0
offset_bottom = 477.0

[node name="player" parent="." instance=ExtResource("4_oaecj")]
position = Vector2(749, 382)
size = 2
leftArmAngle = -5
rightArmAngle = 5
leftLegAngle = -5
rightLegAngle = 5
body = ExtResource("5_ex17d")
stick = ExtResource("6_r5pcs")

[node name="test_paper" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 399.0
offset_top = 116.0
offset_right = 732.0
offset_bottom = 514.0

[node name="p1" type="Label" parent="test_paper"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 124.0
offset_top = 18.0
offset_right = 206.0
offset_bottom = 41.0
text = "5n + 3 = 18"

[node name="p2" type="Label" parent="test_paper"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 60.0
offset_top = 141.0
offset_right = 287.0
offset_bottom = 164.0
text = "how many \"3\" are in the test?"

[node name="p3" type="Label" parent="test_paper"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 130.0
offset_top = 258.0
offset_right = 209.0
offset_bottom = 281.0
text = "11+22+55"

[node name="1-1" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 79.0
offset_top = 75.0
offset_right = 110.0
offset_bottom = 106.0
text = "5"

[node name="1-2" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 153.0
offset_top = 75.0
offset_right = 184.0
offset_bottom = 106.0
text = "3"

[node name="1-3" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 232.0
offset_top = 75.0
offset_right = 263.0
offset_bottom = 106.0
text = "10
"

[node name="2-1" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 79.0
offset_top = 195.24
offset_right = 110.0
offset_bottom = 226.24
text = "4"

[node name="2-2" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 153.0
offset_top = 195.24
offset_right = 184.0
offset_bottom = 226.24
text = "3"

[node name="2-3" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 232.0
offset_top = 195.24
offset_right = 263.0
offset_bottom = 226.24
text = "5"

[node name="3-1" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 79.0
offset_top = 302.975
offset_right = 110.0
offset_bottom = 333.975
text = "77
"

[node name="3-2" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 153.0
offset_top = 302.975
offset_right = 184.0
offset_bottom = 333.975
text = "90
"

[node name="3-3" type="Button" parent="test_paper"]
layout_mode = 0
offset_left = 232.0
offset_top = 302.975
offset_right = 263.0
offset_bottom = 333.975
text = "88
"

[connection signal="pressed" from="test" to="." method="_on_test_pressed"]
[connection signal="pressed" from="test_paper/1-1" to="." method="wrong_ans" binds= ["1-1"]]
[connection signal="pressed" from="test_paper/1-2" to="." method="_on__pressed" binds= ["1-2"]]
[connection signal="pressed" from="test_paper/1-3" to="." method="wrong_ans" binds= ["1-3"]]
[connection signal="pressed" from="test_paper/2-1" to="." method="_on__pressed" binds= ["2-1"]]
[connection signal="pressed" from="test_paper/2-2" to="." method="wrong_ans" binds= ["2-2"]]
[connection signal="pressed" from="test_paper/2-3" to="." method="wrong_ans" binds= ["2-3"]]
[connection signal="pressed" from="test_paper/3-1" to="." method="wrong_ans" binds= ["3-1"]]
[connection signal="pressed" from="test_paper/3-2" to="." method="wrong_ans" binds= ["3-2"]]
[connection signal="pressed" from="test_paper/3-3" to="." method="_on__pressed" binds= ["3-3"]]
